--- a/app/src/main/res/layout/activity_add_review_normal.xml
+++ b/app/src/main/res/layout/activity_add_review_normal.xml
@@ -74,7 +74,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="16dp"
-                    android:text="Has soap?"
+                    android:text="Has Soap?"
                     android:textColor="#28104E"
                     android:textSize="20sp"
                     android:textStyle="bold"
@@ -129,7 +129,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="16dp"
-                    android:text="Has paper towels?"
+                    android:text="Has Paper Towels?"
                     android:textColor="#28104E"
                     android:textSize="20sp"
                     android:textStyle="bold"
@@ -185,7 +185,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="16dp"
-                    android:text="Has accessibility?"
+                    android:text="Has Accessibility?"
                     android:textColor="#28104E"
                     android:textSize="20sp"
                     android:textStyle="bold"
