--- a/app/src/main/res/layout/cardview_list_layout.xml
+++ b/app/src/main/res/layout/cardview_list_layout.xml
@@ -28,7 +28,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="10dp"
-                android:text="Paper towels:"
+                android:text="Paper Towels:"
                 android:textColor="#090000"
                 android:textSize="12sp"
                 android:textStyle="bold" />
